--- a/1.html
+++ b/1.html
@@ -3,6 +3,15 @@
 <head>
   <title> WEB1 - HTML</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4Z0RZ8J1MP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4Z0RZ8J1MP');
+</script>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
